# BinanceExchangeHandler

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  answers.json  config.json  query.json  readme.md
app/: CMakeLists.txt  https.cpp  main.cpp  mainapp.cpp
benchmark/: CMakeLists.txt  benchmark.cpp
cmake-modules/: Findbenchmark.cmake  Findboost.cmake  Findgoogletest.cmake  Findrapidjson.cmake  Findspdlog.cmake  beastConfig.cmake  boostConfig.cmake  opensslConfig.cmake  rapidjsonConfig.cmake  spdlogConfig.cmake
include/: BinanceExchange.h  exchangeInfoClass.h  getHttpsData.h  https.h  utils.h
src/: BinanceExchange.cpp  CMakeLists.txt  getApiData.cpp  getHttpsData.cpp  getHttpsData.h  https.cpp
unittest/: CMakeLists.txt  unittest.cpp
